fix expand/collapse icons on obj detail page
-add new image files for working icons
-fix css to point to working image files
-fix css to pad text appropriately

--- a/app/assets/stylesheets/argo/document.css.sass
+++ b/app/assets/stylesheets/argo/document.css.sass
@@ -54,11 +54,10 @@ h3.section-head
   &.collapsible-section
     background-position: left center
     background-repeat: no-repeat
-    background-image: url('hierarchy/expanded_lg.png') 
+    background-image: url('/assets/expanded-icon.png')
+    padding-left: 19px
     &.collapsed
-      background-image: url('hierarchy/collapsed_lg.png') 
-    .section-head-content	
-      padding-left: 18px
+      background-image: url('/assets/collapsed-icon.png') 
 
 .section-head-link
   float: right
